Add Heroku setup

--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,5 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'org.postgresql:postgresql:42.2.14'
 }
+
+task stage(dependsOn: ['installDist'])
