--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,14 @@ dependencies {
     compile 'org.jetbrains.exposed:exposed-core:0.24.1'
     compile 'org.jetbrains.exposed:exposed-dao:0.24.1'
     compile 'org.jetbrains.exposed:exposed-jdbc:0.24.1'
+    compile 'org.jetbrains.exposed:exposed-java-time:0.24.1'
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'org.postgresql:postgresql:42.2.14'
 }
 
 task stage(dependsOn: ['installDist'])
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xinline-classes"]
+    }
+}
